@@ -9,6 +9,7 @@ DIST SABnzbd-0.7.19-src.tar.gz 2386744 SHA256 31ad0ae24db3873011db816e1b100f4429
 DIST SABnzbd-0.7.20-src.tar.gz 2389762 SHA256 20b3a4613a0ecdede4fdfeb628ae806e458ac1a6fb684306328dd4ed1faf8742 SHA512 51ea888fcb7b49156cb719cb4fe75725d69acd726097d8b2526d6af87d0404bf08d0ab4b82f25dae7ac9a52d6c639e57a145bf5af6005fa435ad31f239a716d5 WHIRLPOOL 2686160be649c051ac1186481dae1e876650fbc91fe3ea1ab2d1569baea51f0ab7d0be6c7942b9facd6e5f856ab24ab36d1dc2f55dc645f06be275b2e43abb4b
 DIST SABnzbd-1.0.0-src.tar.gz 2973807 SHA256 7573dfafd6f3b51e899f47436de0e0b3d8e83a568e2a6f0f3da0aaa1f3d4cfaa SHA512 95d72879e2145532c0f7debda1b1107b14635a58c20565aab220981b4c6dd345869388b94a906f3c48d41d3e078d935263bcd1620fa5166ea6f322137a08619b WHIRLPOOL 907038152dcac7aed4ccaa2f349ec77c6efc79b2fbc25cfc690d05107e4ebdf7033808151eb11563fbbef6c217cf4ee6b659b222a92b1447930e039aac3ba207
 DIST SABnzbd-1.0.2-src.tar.gz 2974940 SHA256 9ced2f4b9486674e8b0a920769710b16e7d96a9981d5aa47b6584f2c3a1e0b62 SHA512 719269f4194ddf12df91e52deda4f9430330dba098b1d4d67093cd2fc0a6a54b1312f27f74c3902aa9d0d8e39925e1f23fe8784d4c34fe5b960c395bbc9a8961 WHIRLPOOL f67284bbb022e35c7eb943f33313648a1ea8c14b2a0e8b8ccf1cdc73b07072f43ccb78dd3c8225d701a49821c81c860c3aa11d5bc16c4b87bb021254b35d6b34
+DIST SABnzbd-1.0.3-src.tar.gz 2975111 SHA256 cf87d3f17fc03e8b3a4b3010261115c2ad7e2f773b5ede95a80025b340dbbd35 SHA512 6213cb73f6d2127133c5ab292e5ac2bcf6f4c780b5345b54b91459271c1acad6c6c95c4ba1ebc1e34341d5dc09d14e4806b84b977fc90f5ff0a49725b08a77e9 WHIRLPOOL 021a864f8d2b90481da5f4d1b3b1a5a5478230c3a61af2c30ba2be65594224863a48d58d475fc2e79986274e48e5ad83b5d13a6bc0a7829e99552062fdf185a7
 EBUILD sabnzbd-0.7.16.ebuild 2199 SHA256 43ba6fd39b3f90b20fcca42faca1cab428040c3fc9b297728402b4c80b88bb0c SHA512 ef3ff255985b5223a7f46f4cffc9b3e1922af1ef06f61b8fd116c1ffd68615ac021900e0d6dde7b4f0b666e8b9b4c3757c6bd2d79752ab4621062d2b883136fa WHIRLPOOL 786bcf8af08ed0fe9e351c251fe5869f1422db707fffae0b8e412d9cc6d95dd2f4a26ad3340762bc6cdf41edd3a8f23fc94f59e5638898ed9e9d44f53fae939b
 EBUILD sabnzbd-0.7.17.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
 EBUILD sabnzbd-0.7.18.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
@@ -17,5 +18,6 @@ EBUILD sabnzbd-0.7.20-r1.ebuild 2071 SHA256 70bec5a63e0df2b1a97ecdb4b92128256089
 EBUILD sabnzbd-0.7.20.ebuild 2199 SHA256 7e7fcdad5689e6d387805c3ec1ff74df2fda83c4ec191a8a9a1fa60f4981a929 SHA512 218e3e0ac1b6f5c92851ff2322cf85f28fedd7eb0132187c7bd785c7fb2a91b28004951b60e8176b17ba42e2572f11795396b1f1d0cfabef5924a928402df5bb WHIRLPOOL 6d7a76b01255c4803a115cebf54e64c0047e3e3d9b98490848b0c82911de824f207c1448a31048e1ce92451c3dc956a9a6fed397fc146b7c4932ca7286897544
 EBUILD sabnzbd-1.0.0.ebuild 2091 SHA256 b4ea0d3dbb306fe5d0dc455e3eac7304a527164ee865c57d5805127896f67105 SHA512 19fa3dc848e7e874ab260951ece9e14c54641501192503364c4c16aa9c7ca96d1982e23b3a65dfc4a2d9585ae6115f84085bd68833351396f63366ff83418dc5 WHIRLPOOL b73fa6058d1fa76975855a86f9dc61e772f87506a8c96aedc903e0d9e8fbef7e3297d603abce7f5c829a0cb29bfc07d36d3180cf83a3c19dae4ae4c8e47801ba
 EBUILD sabnzbd-1.0.2.ebuild 2091 SHA256 b4ea0d3dbb306fe5d0dc455e3eac7304a527164ee865c57d5805127896f67105 SHA512 19fa3dc848e7e874ab260951ece9e14c54641501192503364c4c16aa9c7ca96d1982e23b3a65dfc4a2d9585ae6115f84085bd68833351396f63366ff83418dc5 WHIRLPOOL b73fa6058d1fa76975855a86f9dc61e772f87506a8c96aedc903e0d9e8fbef7e3297d603abce7f5c829a0cb29bfc07d36d3180cf83a3c19dae4ae4c8e47801ba
-MISC ChangeLog 4519 SHA256 08589c7f5d9d72ff2627f54fe731f36506490b5f296f6b734e38d328799c9ba0 SHA512 2113b15a17bed95c2f44d657cc6dbbe51fe82c4c052834c21e90cc50849cd1ed0dfb59d4d42b1874704c3fbad93d1e868a5d3ca7c966919576ba3e609adf136e WHIRLPOOL df8e1fda1ee30792952243fb42cbbfcdae0924283a4fd65173a019d499f3a3c822918d52bcb25dd1f4c53af11a07dbbe0fc50597ce1678f99edb08fd4eaa11da
+EBUILD sabnzbd-1.0.3.ebuild 2091 SHA256 b4ea0d3dbb306fe5d0dc455e3eac7304a527164ee865c57d5805127896f67105 SHA512 19fa3dc848e7e874ab260951ece9e14c54641501192503364c4c16aa9c7ca96d1982e23b3a65dfc4a2d9585ae6115f84085bd68833351396f63366ff83418dc5 WHIRLPOOL b73fa6058d1fa76975855a86f9dc61e772f87506a8c96aedc903e0d9e8fbef7e3297d603abce7f5c829a0cb29bfc07d36d3180cf83a3c19dae4ae4c8e47801ba
+MISC ChangeLog 4662 SHA256 15932278ffd7fa1f646c612b25c842b320ecd8288ec474b7d9c2106ee78d0afc SHA512 fda0cafd362de47b6c9fe1a214488471f2f7db120db6df071d046725914ebd0b419891a5592cc381cf7324a213ddd1b54e381f40d6a41d5b462527ba954a50ae WHIRLPOOL 247f8e8c15ac891422c7ebfcabff444ac4ae26091b7c11e8d832b6f0be646b8312036281df000bd35f6c997c4a7d961bfb9b4b34c1c3d39fd2d0c86d0faeaef8
 MISC metadata.xml 354 SHA256 86d085ca453373b20774f1a383d8161ab68e816d04fdf0e592f7978d1f366330 SHA512 af3229b875db9e39376b7e274113430b858533562c9cd2a20a833e845fa835d0bcac2b793c4d7bc56d1fec0674b24f220da9c585009ae0eff173777183ed9e19 WHIRLPOOL 793aad64d70462bac4af754f8c55e42f16356d6912808aa4efeed308cd9f12a72faa5eb2c5b02cc2eae54f796f375b3ccf3c1f3301b77088ba55be52d5878da1
